# SemiDone

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.claude/: settings.local.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  models.rs  storage.rs
src/api/: localStorage.ts  tauri.ts
src/components/: AttachmentUpload.tsx  ClearCacheDialog.tsx  Layout.tsx  QuickAddTask.tsx  ReportExportDialog.tsx  StartupTip.tsx  TaskFilter.tsx  TaskItem.tsx  TaskStats.tsx  UsageButton.tsx  UsageChart.tsx
src/pages/: Home.tsx  Other.tsx  TaskDetail.tsx  UsageStats.tsx
src/store/: settingsStore.ts  taskStore.ts  usageStore.ts
src/styles/themes/: pink.css
src/types/: index.ts
